--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,40 @@ body {
     color: var(--cinza-secundario);
     font-size: 14px;
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2em 2em;
+    }
+
+    .principal {
+        height: 70vh;
+    }
+
+    .secundario {
+        margin: 0;
+        text-align: center;
+        height: 90vh;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .dispositivos__lista {
+        display: block;
+    }
+
+    .rodape__lista {
+        display: block;
+    }
+}
